# urdf_models

./: README.md
install/: local_setup.sh  setup.sh
install/Final_description/share/Final_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/assembly_refined_description/: package.xml  setup.cfg  setup.py
src/assembly_refined_description/assembly_refined_description/: cameo.py  openCV_img_processing.py
src/assembly_refined_description/launch/: gazebo.launch.py
src/assembly_refined_description/meshes/: camera_v2_1.stl  motor_mount_v3_1.stl  motor_mount_v3__1__1.stl  wheel_v3_1.stl  wheel_v3__1__1.stl
src/assembly_refined_description/urdf/: assembly_refined.gazebo  assembly_refined.xacro  gazebo_control.xacro  materials.xacro
src/assembly_refined_description/worlds/: scatter.world
src/binocular_vision_bot/launch/: display.launch.py  gazebo.launch.py
src/binocular_vision_bot/meshes/: ball_caster_v1_1.stl  camera_v1_1.stl  motor_dummy_v1__1__1.stl  motor_mount_v1_1.stl  motor_mount_v1__1__1.stl
src/binocular_vision_bot/urdf/: final.gazebo  final.trans
src/binocular_vision_bot/worlds/: custom.world
src/simple_four_wheels_description/: setup.cfg  setup.py
src/simple_four_wheels_description/launch/: display.launch.py  gazebo.launch.py
src/simple_four_wheels_description/meshes/: base_link.stl  left_wheel_1_1.stl  right_cam_1.stl
src/simple_four_wheels_description/urdf/: simple_four_wheels.gazebo  simple_four_wheels.trans  simple_four_wheels.xacro
(+118 files in other folders)
